package ar.edu.davinci.domain;

public class Factura {

	
}
