package ar.edu.davinci.domain;

public abstract class Servicio extends Producto {

	public Servicio(String nombre, Double precioLista) {
		super(nombre, precioLista);
	}

}
