package ar.edu.davinci.domain;

public class ServicioArmado extends Servicio {

	public ServicioArmado(String nombre, Double precioLista) {
		super(nombre, precioLista);
	}

}
