package ar.edu.davinci.domain;

public class ServicioReparacion extends Servicio {

	public ServicioReparacion(String nombre, Double precioLista) {
		super(nombre, precioLista);
	}

}
